# classificacao-imagens

./: CMakeLists.txt  README.md  classificacao-imagens.c  mnist_cnn_int8_model.h  tflm_wrapper.cpp  tflm_wrapper.h
script-de-envio/: envio-imagem.py  requierements.txt
